--- a/templates/hogehoge/result.html
+++ b/templates/hogehoge/result.html
@@ -25,10 +25,16 @@
 			</header>
 
 			<div>
-<h1>探していたのは・・・</h1>
-    <p>{{music.artist}}の{{music.title}}</p>
+				<h1>探していたのは…</h1>
+				<p>{{music.artist}}の{{music.title}}</p>
+				<br />
 			</div>
-
+			<div>
+				<h2>もしかして…</h2>
+				{% for elements in list %}
+				<font size=2>距離:{{elements.0}} タイトル:{{elements.1.title}} アーティスト:{{elements.1.artist}}</font><br />
+				{% endfor %}
+			</div>
 			<footer>
 				<p>
 					&copy; Copyright  by Nagai
