add bayes classifier(but prior probability is not implemented)

--- a/templates/hogehoge/index.html
+++ b/templates/hogehoge/index.html
@@ -26,7 +26,7 @@
 
 			<div>
 
-	<form method="get" action="result" name="input">
+	<form method="get" action="/hogehoge/prob/result" name="input">
 	{% for question in questions %}
 	<p>
  	質問：「{{question.content}}」 <br />
